// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderObligationCard > рендерит карточку с источником и обязательными пометками 1`] = `
{
  "automated": true,
  "sourceUrls": [
    "https://pravo.gov.ru/",
  ],
  "text": "📋 Обязанность · МОДЕЛЬНЫЕ ДАННЫЕ
Передавать сведения о маркированной воде

Статус: Применяется
Почему: Основной ОКВЭД начинается с 56
Кратко: Фиксировать выбытие упакованной воды через кассу.
Срок: при каждой продаже
Действует с: 01.09.2026
Проверено: 25.09.2026, 12:00 (МСК)

Первоисточник:
• Модельный нормативный акт № 1, п. 5 — https://pravo.gov.ru/

ℹ️ Текст сформирован автоматически. Сверяйтесь с первоисточником.
🧪 Модельные данные — не результат реальной интеграции.",
}
`;

exports[`renderRequirementDelta > рендерит изменение статуса без модельной пометки для реального источника 1`] = `
{
  "automated": true,
  "sourceUrls": [
    "http://pravo.gov.ru/proxy/ips/?docbody=&nd=102081652",
  ],
  "text": "🔔 Изменение: обязанность
Выдавать кассовый чек при расчёте

Изменился статус требования
Было: Недостаточно данных
Стало: Применяется
Зафиксировано: 25.09.2026, 13:00 (МСК)

Первоисточник:
• Федеральный закон от 22.05.2003 № 54-ФЗ, ст. 1.2 — http://pravo.gov.ru/proxy/ips/?docbody=&nd=102081652

ℹ️ Текст сформирован автоматически. Сверяйтесь с первоисточником.",
}
`;

exports[`renderRequirementDelta > рендерит ранний сигнал как требующий проверки 1`] = `
{
  "automated": true,
  "sourceUrls": [
    "https://pravo.gov.ru/",
  ],
  "text": "📝 Проект изменения: обязанность · МОДЕЛЬНЫЕ ДАННЫЕ
Передавать сведения о маркированной воде

Опубликован проект изменения. Это ещё не действующая норма — нужна проверка
Стало: Требуется проверка

Первоисточник:
• Модельный нормативный акт № 1, п. 5 — https://pravo.gov.ru/

ℹ️ Текст сформирован автоматически. Сверяйтесь с первоисточником.
🧪 Модельные данные — не результат реальной интеграции.",
}
`;
